Fix texte défilant version mobile

--- a/sass/_scrolling-txt.scss
+++ b/sass/_scrolling-txt.scss
@@ -23,6 +23,7 @@
   overflow: hidden;
   position: relative;
 }
+
 .scrolling-txt h3 {
   position: absolute;
   width: 100%;
@@ -71,7 +72,7 @@
 
 @media screen and (max-width: 576px) {
   .scrolling-txt {
-    font-size: 15px;
+    font-size: 11px;
   }
 }
 
